--- a/pom.xml
+++ b/pom.xml
@@ -129,15 +129,20 @@
             <version>2.2.0</version>
         </dependency>
         <dependency>
-            <groupId>io.cronapp</groupId>
-            <artifactId>olingo-odata2-jpa-processor-core</artifactId>
-            <version>2.2.5</version>
-        </dependency>
-        <dependency>
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-dbcp</artifactId>
             <version>${tomcat.version}</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.35</version>
+        </dependency>
+        <dependency>
+            <groupId>io.cronapp</groupId>
+            <artifactId>olingo-odata2-jpa-processor-core</artifactId>
+            <version>2.2.6</version>
         </dependency>
     </dependencies>
     <properties>
